discovery-d.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery
  labels:
    app: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      nodeSelector:
       type: app
      containers:
      - name: eureka
        image: karku/discovery:1.0
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "250Mi"
            cpu: "500m"
        ports:
        - containerPort: 1111
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
spec:
  selector:
    app: eureka
  ports:
    - name: http
      port: 1111
      targetPort: 1111
