inventory-d.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  labels:
    app: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      nodeSelector:
       type: app
      containers:
      - name: inventory
        image: karku/inventory:1.0
        ports:
        - containerPort: 3333
        command: ["java"]
        args: ["-jar","-Dspring.datasource.url=jdbc:mysql://mysql:3306/","-Dspring.datasource.username=root","-Dspring.datasource.password=password","/app.jar"]

---
apiVersion: v1
kind: Service
metadata:
  name: inventory
spec:
  selector:
    app: inventory
  ports:
    - name: http
      port: 3333
      targetPort: 3333
