invoice-d.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoice
  labels:
    app: invoice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoice
  template:
    metadata:
      labels:
        app: invoice
    spec:
      nodeSelector:
       type: app
      containers:
      - name: invoice
        image: karku/invoice:1.0
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4444
        command: ["java"]
        args: ["-jar","-Dspring.datasource.url=jdbc:mysql://mysql:3306/","-Dspring.datasource.username=root","-Dspring.datasource.password=password","/app.jar"]

---
apiVersion: v1
kind: Service
metadata:
  name: invoice-service
spec:
  selector:
    app: invoice
  ports:
    - name: http
      port: 4444
      targetPort: 4444
