zuul-d.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zuul
  labels:
    app: zuul
spec:
  replicas: 1
  selector:
   matchLabels:
    app: zuul
  template:
   metadata:
    labels:
     app: zuul
   spec:
    nodeSelector:
      type: app
    containers:
      - name: zuul
        image: karku/zuul:1.0
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "250Mi"
            cpu: "500m"
        ports:
          - containerPort: 1101
        command: ["java"]
        args: ["-jar","-Dmanagement.port=1102","-Deureka.client.serviceUrl.defaultZone=http://eureka:1111/eureka","/app.jar"]


---
apiVersion: v1
kind: Service
metadata:
  name: zuul
spec:
  selector:
    app: zuul
  ports:
    - name: http
      targetPort: 1101
      port: 1101
  type: NodePort
