ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gate
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 defaultBackend:
         service:
              name: zuul
              port:
                 number: 1101
 rules:
  - host: karkuvel.com 
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
           service:
             name: zuul
             port:
                number: 1101
      - path: /eureka
        pathType: Exact
        backend:
          service:
            name: eureka
            port:
              number: 1111
      - path: /customer
        pathType: Exact
        backend:
          service:
            name: customer-service
            port:
              number: 2222
      - path: /invoice
        pathType: Exact
        backend:
          service:
            name: invoice-service
            port:
              number: 4444
      - path: /inventory
        pathType: Exact
        backend:
          service:
            name: inventory-service
            port:
              number: 3333
